[package]
name = "elesis"
author = ["Seiyial Aurum <seiyial@seiyial.xyz>"]
version = "0.1.0"
edition = "2018"

[dependencies]
serenity = { version = "0.11", features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.1" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.1" }
